290cm 페이지구성

--- a/vite/src/pages/layout/header.html
+++ b/vite/src/pages/layout/header.html
@@ -5,8 +5,8 @@
   <nav>
     <ul>
       <li><a href="/">HOME</a></li>
-      <li><a href="/src/pages/product/">PRODUCT</a></li>
-      <li><a href="/src/pages/login/">LOGIN</a></li>
+      <li><a href="/src/pages/product/product.html">PRODUCT</a></li>
+      <li><a href="/src/pages/login/login.html">LOGIN</a></li>
     </ul>
   </nav>
 </header>
